--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 
         </div>
-        <div class="container mt-5 mb-5 d-flex flex-col justify-content-center align-items-center " id="contact">
+        <div class="container mt-5 mb-5 d-flex flex-col justify-content-center align-items-center " id="contact"" style="height: 455px;">
             <div>
                 <div>
                     <h2>LET'S STAY IN TOUCH</h2>
@@ -282,11 +282,11 @@
 
             </div>
  
-        </div>
+        </section>
 
     </main>
-    <footer>
-
+    <footer class="text-center">
+        <small class="text">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
